Update email input border

--- a/style.css
+++ b/style.css
@@ -474,7 +474,7 @@ a:hover {
   font-size: 1.1rem;
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
-  border-width: none;
+  border: none;
 }
 
 form .emailAlert {
